--- a/style.css
+++ b/style.css
@@ -1,19 +1,61 @@
 body{
-    background-color: rgb(105, 105, 105);
+    background-color: rgba(202, 202, 202, 0.836);
+    font-family: Verdana;
+    max-width: 900px;
+    margin: auto;
 }
 
+.photo{
+    border: 1px solid rgb(146, 146, 146);
+    border-radius: 50%;
+}
 .post_title, .subtitle, #title{
-    color: blue; 
+    color: rgb(43, 43, 43); 
+}
+
+#title{
+    font-size: 40px;
+    text-transform: uppercase;
+}
+
+a{
+    text-decoration: line-through;
+    color: rgb(104, 104, 104);
 }
 
 .post_title{
     font-size: 16pt;
     font-style: italic;
+    margin: 0;
+    margin-bottom: 15px;
 }
 
 .post{
     background-color: white;
-    padding: 10px;
-    border: 3px solid black;
-    margin: 10px;
+    padding: 15px;
+    border: 3px solid rgba(109, 109, 109, 0.774);
+    margin-bottom: 10px;
+    border-radius: 5px;
+}
+
+.post_content{
+    margin: 0;
+    margin-bottom: 15px;
+    text-transform: capitalize;
+    text-align: center;
+
+}
+
+.post_image{
+    margin-bottom: 15px;
+    width: 100%;
+}
+
+.contacts_list{
+    list-style-type: none;
+    padding-left: 15px;
+}
+
+.contacts_list li a{
+    text-decoration: none;
 }
